<?xml version="1.0"?>
<package format="3">
  <name>ultrasonic_sensor</name>
  <version>0.0.0</version>
  <description>Ultrasonic sensor node publishing LaserScan</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>RPi.GPIO</exec_depend>
</package>
